--- a/solution/envs/.env.hub
+++ b/solution/envs/.env.hub
@@ -1,2 +1,11 @@
 ASPNETCORE_ENVIRONMENT=Development
-ConnectionStrings__DefaultConnection=Host=f1_postgres;Database=f1_database;Username=f1_sgcan;Password=f1_sgcan123456
+ConnectionStrings__DefaultConnection=Host=postgres;Database=f1_database;Username=f1_sgcan;Password=f1_sgcan123456
+JWT_SECRET_KEY=mi_clave_secreta_jwt_super_segura_2025
+POSTGRES_DB=f1_database
+POSTGRES_USER=f1_sgcan
+POSTGRES_PASSWORD=f1_sgcan123456
+JWT_ISSUER=HubApi
+JWT_AUDIENCE=HubApiUsers
+JWT_EXPIRATION_MINUTES=60
+Database__AutoMigrate=true
+Database__EnsureCreated=true
