--- a/solution/envs/.env.hub
+++ b/solution/envs/.env.hub
@@ -9,3 +9,4 @@ JWT_AUDIENCE=HubApiUsers
 JWT_EXPIRATION_MINUTES=60
 Database__AutoMigrate=true
 Database__EnsureCreated=true
+FILE_STORAGE__UPLOADPATH=/app/shared
