--- a/solution/hub/appsettings.json
+++ b/solution/hub/appsettings.json
@@ -9,7 +9,7 @@
     "ExpirationMinutes": "60"
   },
   "FileStorage": {
-    "UploadPath": "../files"
+    "UploadPath": "/app/shared"
   },
   "Logging": {
     "LogLevel": {
