--- a/solution/hub/Dockerfile.dev
+++ b/solution/hub/Dockerfile.dev
@@ -14,6 +14,9 @@ RUN dotnet restore
 # Copy the entire source code
 COPY . .
 
+# Create shared directory and set permissions
+RUN mkdir -p /app/shared && chmod 755 /app/shared
+
 # Expose the port
 EXPOSE 5000
 
