--- a/solution/scraper/requirements.txt
+++ b/solution/scraper/requirements.txt
@@ -1,21 +1,12 @@
-annotated-types==0.7.0
-anyio==4.4.0
-black==24.8.0
-click==8.1.7
-exceptiongroup==1.2.2
-fastapi==0.112.2
-h11==0.14.0
-idna==3.8
-mypy-extensions==1.0.0
-packaging==24.1
-pathspec==0.12.1
-platformdirs==4.2.2
-pydantic==2.8.2
-pydantic_core==2.20.1
-pyodbc==5.1.0
-python-dotenv==1.0.1
-sniffio==1.3.1
-starlette==0.38.4
-tomli==2.0.1
-typing_extensions==4.12.2
-uvicorn==0.30.6
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+sqlalchemy==2.0.42
+psycopg2-binary==2.9.10
+requests==2.31.0
+beautifulsoup4==4.12.2
+celery==5.3.4
+redis==5.0.1
+python-multipart==0.0.6
+flower==2.0.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
