--- a/solution/envs/.env.hub
+++ b/solution/envs/.env.hub
@@ -1,12 +1,11 @@
 ASPNETCORE_ENVIRONMENT=Development
 ConnectionStrings__DefaultConnection=Host=postgres;Database=f1_database;Username=f1_sgcan;Password=f1_sgcan123456
 JWT_SECRET_KEY=mi_clave_secreta_jwt_super_segura_2025
-POSTGRES_DB=f1_database
-POSTGRES_USER=f1_sgcan
-POSTGRES_PASSWORD=f1_sgcan123456
 JWT_ISSUER=HubApi
 JWT_AUDIENCE=HubApiUsers
-JWT_EXPIRATION_MINUTES=60
+JWT_EXPIRATION_MINUTES=120
 Database__AutoMigrate=true
 Database__EnsureCreated=true
 FILE_STORAGE__UPLOADPATH=/app/shared
+Cors__AllowedOrigins__0=http://localhost:9999
+Cors__AllowedOrigins__1=http://f1_react:3000
