--- a/solution/envs/.env.postgres
+++ b/solution/envs/.env.postgres
@@ -1,3 +1,6 @@
-POSTGRES_DB="f1_database"
-POSTGRES_USER="f1_sgcan"
-POSTGRES_PASSWORD="f1_sgcan123456"
+# Variables centralizadas de PostgreSQL
+POSTGRES_HOST=f1_postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=f1_database
+POSTGRES_USER=f1_sgcan
+POSTGRES_PASSWORD=f1_sgcan123456
