--- a/solution/hub/appsettings.json
+++ b/solution/hub/appsettings.json
@@ -12,9 +12,7 @@
     "UploadPath": "/app/shared"
   },
   "Cors": {
-    "AllowedOrigins": [
-      "http://localhost:3000"
-    ]
+    "AllowedOrigins": []
   },
   "Logging": {
     "LogLevel": {
