--- a/solution/envs/.env.hub
+++ b/solution/envs/.env.hub
@@ -7,5 +7,10 @@ JWT_EXPIRATION_MINUTES=120
 Database__AutoMigrate=true
 Database__EnsureCreated=true
 FILE_STORAGE__UPLOADPATH=/app/shared
+
+# Configuración del servicio de procesamiento (scraper)
+PROCESSING_SERVICE_BASE_URL=http://f1_scraper:8000
+PROCESSING_SERVICE_ENDPOINT=/process
+
 Cors__AllowedOrigins__0=http://localhost:9999
 Cors__AllowedOrigins__1=http://f1_react:3000
