--- a/solution/envs/.env.scraper
+++ b/solution/envs/.env.scraper
@@ -3,3 +3,7 @@ DOCKER_ENV=true
 REDIS_HOST=f1_redis
 REDIS_PORT=6379
 FILE_STORAGE__UPLOADPATH=/app/shared
+
+# Configuración CORS
+# Permite acceso solo desde el hub backend (puerto 9010)
+CORS_ORIGINS=http://localhost:9010
