--- a/solution/hub/appsettings.Development.json
+++ b/solution/hub/appsettings.Development.json
@@ -2,6 +2,10 @@
   "Cors": {
     "AllowedOrigins": ["http://localhost:3000", "https://localhost:3000"]
   },
+  "ProcessingService": {
+    "BaseUrl": "http://localhost:9020",
+    "ProcessEndpoint": "/process"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
