--- a/solution/hub/appsettings.json
+++ b/solution/hub/appsettings.json
@@ -11,6 +11,10 @@
   "FileStorage": {
     "UploadPath": "/app/shared"
   },
+  "ProcessingService": {
+    "BaseUrl": "http://localhost:9020",
+    "ProcessEndpoint": "/process"
+  },
   "Cors": {
     "AllowedOrigins": []
   },
