--- a/solution/hub/.env.example
+++ b/solution/hub/.env.example
@@ -9,6 +9,10 @@ JWT_ISSUER=HubApi
 JWT_AUDIENCE=HubApiUsers
 JWT_EXPIRATION_MINUTES=60
 
+# Processing Service Configuration
+PROCESSING_SERVICE_BASE_URL=http://localhost:9020
+PROCESSING_SERVICE_ENDPOINT=/process
+
 # Application Configuration
 API_PORT=8080
 DB_AUTO_MIGRATE=true
