--- a/solution/envs/.env.frontend
+++ b/solution/envs/.env.frontend
@@ -1,5 +1,6 @@
 # NextAuth.js Configuration para Docker
 NEXTAUTH_URL=http://localhost:9999
+NEXTAUTH_URL_INTERNAL=http://f1_react_prod:3000
 NEXTAUTH_SECRET=mi-super-secreto-unico-para-desarrollo-2025-sgcan
 
 # API Backend Configuration para Docker - usar el nombre del servicio
